some cosmetic changes to fix column shifting when expanding a job

--- a/Duplicati/Server/webroot/ngax/less/style.less
+++ b/Duplicati/Server/webroot/ngax/less/style.less
@@ -898,6 +898,8 @@ body {
                             border-top: 0px;
                             padding-top: 20px;
                             margin-bottom: 25px;
+                            width: 295px;
+                            margin-right: 55px;
                         }
 
                         .even > :last-child {
@@ -943,7 +945,8 @@ body {
                         }
 
                         dl {
-                            padding-left: 55px;
+                            /* padding-left: 55px; */
+                            padding-left: 0px;
                             overflow: hidden;
                             font-size: 14px;
 
